--- a/src/sample/lessons.fxml
+++ b/src/sample/lessons.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -16,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: Black;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.lessonsController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: Black;" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.lessonsController">
    <bottom>
       <HBox style="-fx-background-color: grey;" BorderPane.alignment="CENTER">
          <children>
@@ -34,8 +33,8 @@
               <menus>
                   <Menu mnemonicParsing="false" text="File">
                      <items>
-                        <MenuItem mnemonicParsing="false" text="Help" />
-                        <MenuItem mnemonicParsing="false" text="Close" />
+                        <MenuItem fx:id="HelpBtn" mnemonicParsing="false" onAction="#HelpBtnClick" text="Learnix Website" />
+                        <MenuItem fx:id="CloseBtn" mnemonicParsing="false" onAction="#CloseBtnClick" text="Close the Application" />
                      </items>
                   </Menu>
               </menus>
@@ -71,8 +70,15 @@
             </ImageView>
             <HBox prefHeight="32.0" prefWidth="352.0">
                <children>
-                  <Region prefHeight="32.0" prefWidth="155.0" />
-                  <Button fx:id="practiceTestBtn" mnemonicParsing="false" onAction="#practiceTestBtnClick" text="Practice test" />
+                  <Region prefHeight="77.0" prefWidth="88.0" />
+                  <Button fx:id="practiceTestBtn" mnemonicParsing="false" onAction="#practiceTestBtnClick" prefHeight="37.0" prefWidth="198.0" text="Practice test">
+                     <HBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                     </HBox.margin>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding></Button>
+                  <Region layoutX="10.0" layoutY="10.0" prefHeight="77.0" prefWidth="58.0" />
                </children>
             </HBox>
          </children>
@@ -95,33 +101,40 @@
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
             </Label>
-            <Button fx:id="whatIsGnuBtn" mnemonicParsing="false" onAction="#whatIsGnuBtnClick" prefHeight="25.0" prefWidth="166.0" text="What Is GNU and Linux?">
+            <Button fx:id="whatIsGnuBtn" mnemonicParsing="false" onAction="#whatIsGnuBtnClick" prefHeight="37.0" prefWidth="198.0" text="What Is GNU and Linux?">
                <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
                <VBox.margin>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="commandLineBasicsBtn" layoutX="30.0" layoutY="64.0" mnemonicParsing="false" onAction="#commandLineBasicsBtnClick" prefHeight="25.0" prefWidth="164.0" text="Command Line Basics">
+            <Button fx:id="commandLineBasicsBtn" layoutX="30.0" layoutY="64.0" mnemonicParsing="false" onAction="#commandLineBasicsBtnClick" prefHeight="37.0" prefWidth="198.0" text="Command Line Basics">
                <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
                <VBox.margin>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="systemPackagesBtn" mnemonicParsing="false" onAction="#systemPackagesBtnClick" prefHeight="25.0" prefWidth="164.0" text="System Packages">
+            <Button fx:id="systemPackagesBtn" mnemonicParsing="false" onAction="#systemPackagesBtnClick" prefHeight="37.0" prefWidth="198.0" text="System Packages">
                <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
                <VBox.margin>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
             </Button>
             <Region prefHeight="170.0" prefWidth="0.0" />
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="It's reccomended to try on a terminal alongside these tutorials. If you are running Windows, ChromeOS, or another operating system without access to a terminal you can use an online version to practice, copy and paste this link into your browser:&#10;" wrappingWidth="339.162109375" />
-            <TextField text="https://linuxcontainers.org/lxd/try-it/" />
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="It's reccomended to try on a terminal alongside these tutorials. If you are running Windows, ChromeOS, or another operating system without access to a terminal you can use an online version to practice. Click this button to open it in your browser.&#10;" wrappingWidth="339.162109375" />
+            <Button fx:id="onlineCLIBtn" mnemonicParsing="false" onAction="#onlineCLIBtnClick" text="Online CLI">
+               <VBox.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </Button>
          </children>
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -135,17 +148,17 @@
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
             <Region prefHeight="101.0" prefWidth="195.0" />
-            <Button fx:id="usersAndGroupsBtn" mnemonicParsing="false" onAction="#usersAndGroupsBtnClick" prefHeight="25.0" prefWidth="164.0" text="Users and Groups">
+            <Button fx:id="usersAndGroupsBtn" mnemonicParsing="false" onAction="#usersAndGroupsBtnClick" prefHeight="37.0" prefWidth="198.0" text="Users and Groups">
                <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
                <VBox.margin>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="permissionsBtn" mnemonicParsing="false" onAction="#permissionsBtnClick" prefHeight="25.0" prefWidth="164.0" text="Permissions">
+            <Button fx:id="permissionsBtn" mnemonicParsing="false" onAction="#permissionsBtnClick" prefHeight="37.0" prefWidth="198.0" text="Permissions">
                <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
                <VBox.margin>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
