--- a/src/sample/systemPackages/fromSourceCode.fxml
+++ b/src/sample/systemPackages/fromSourceCode.fxml
@@ -13,28 +13,19 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.fromSourceCodeController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.fromSourceCodeController">
    <top>
       <VBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <MenuBar style="-fx-background-color: grey;">
-              <menus>
-                <Menu mnemonicParsing="false" text="File">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Close" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
-                  </items>
-                </Menu>
-              </menus>
+               <menus>
+                  <Menu mnemonicParsing="false" text="File">
+                     <items>
+                        <MenuItem fx:id="HelpBtn" mnemonicParsing="false" onAction="#HelpBtnClick" text="Learnix Website" />
+                        <MenuItem fx:id="CloseBtn" mnemonicParsing="false" onAction="#CloseBtnClick" text="Close the Application" />
+                     </items>
+                  </Menu>
+               </menus>
             </MenuBar>
             <Button fx:id="backBtn" mnemonicParsing="false" onAction="#backBtnClick" text="Back to lessons">
                <VBox.margin>
@@ -68,7 +59,7 @@
    <left>
       <VBox prefHeight="591.0" prefWidth="484.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Often times you will encounter an obscure package that only comes in the form of pure source code. You'll need to use a few commands to get that source code package compiled and installed on your system.&#10;&#10;First thing is first, you'll need to have software to install the tools that will allow you to compile source code.&#10;&#10;$ sudo apt install build-essential&#10;Once you do that, extract the contents of the package file, most likely a .tar.gz file.&#10;&#10;$ tar -xzvf package.tar.gz&#10;Before you do anything, take a look at the README or INSTALL file inside the package. Sometimes there will be specific installation instructions.&#10;&#10;Depending on what compile method that the developer used, you'll have to use different commands, such as cmake or something else.&#10;&#10;However, most commonly you'll see basic make compilation, so we'll discuss that:&#10;&#10;Inside the package contents will be a configure script, this script checks for dependencies on your system and if you are missing anything, you'll see an error and you'll need to fix those dependencies.&#10;&#10;$ ./configure" wrappingWidth="470.0" VBox.vgrow="ALWAYS">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="NOT FINISHED&#10;&#10;Often times you will encounter an obscure package that only comes in the form of pure source code. You'll need to use a few commands to get that source code package compiled and installed on your system.&#10;&#10;First thing is first, you'll need to have software to install the tools that will allow you to compile source code.&#10;&#10;$ sudo apt install build-essential&#10;Once you do that, extract the contents of the package file, most likely a .tar.gz file.&#10;&#10;$ tar -xzvf package.tar.gz&#10;Before you do anything, take a look at the README or INSTALL file inside the package. Sometimes there will be specific installation instructions.&#10;&#10;Depending on what compile method that the developer used, you'll have to use different commands, such as cmake or something else.&#10;&#10;However, most commonly you'll see basic make compilation, so we'll discuss that:&#10;&#10;Inside the package contents will be a configure script, this script checks for dependencies on your system and if you are missing anything, you'll see an error and you'll need to fix those dependencies.&#10;&#10;$ ./configure" wrappingWidth="470.0" VBox.vgrow="ALWAYS">
                <font>
                   <Font size="15.0" />
                </font>
